--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Donghoon Shin
+title: Suyeon Jeong
 author:
-  name: Donghoon Shin
-  email: dhoon@uw.edu
+  name: Suyeon Jeong
+  email: suyeon.jeong20@snu.ac.kr
 description: > # this means to ignore newlines until "show_excerpts:"
   Donghoon Shin is a first-year Ph.D. student in HCDE at the Unviersity of Washington
 
@@ -9,7 +9,7 @@ show_excerpts: false # set to true to show excerpts on the homepage
 
 permalink: /:title
 
-url: "https://donghoon.io" # the base hostname & protocol for your site
+url: "https://suyeonbc.gihub.io" # the base hostname & protocol for your site
   
 # Minima date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
