--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Suyeon Jeong
   email: suyeon.jeong20@snu.ac.kr
 description: > # this means to ignore newlines until "show_excerpts:"
-  Donghoon Shin is a first-year Ph.D. student in HCDE at the Unviersity of Washington
+  Suyeon Jeong is a first-year Ph.D. student in HCDE at the Unviersity of Washington
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
